build/log/idf_py_stdout_output_39756
Command: ninja all
[1/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: [code=1] esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/nekochira/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/nekochira/code/drone/hello_world/build/config -I/home/nekochira/code/drone/hello_world/main -I/home/nekochira/esp/esp-idf/components/newlib/platform_include -I/home/nekochira/esp/esp-idf/components/freertos/config/include -I/home/nekochira/esp/esp-idf/components/freertos/config/include/freertos -I/home/nekochira/esp/esp-idf/components/freertos/config/xtensa/include -I/home/nekochira/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/nekochira/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/nekochira/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/nekochira/esp/esp-idf/components/freertos/esp_additions/include -I/home/nekochira/esp/esp-idf/components/esp_hw_support/include -I/home/nekochira/esp/esp-idf/components/esp_hw_support/include/soc -I/home/nekochira/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/nekochira/esp/esp-idf/components/esp_hw_support/dma/include -I/home/nekochira/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/nekochira/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/nekochira/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/nekochira/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/nekochira/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/nekochira/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/nekochira/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/nekochira/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -I/home/nekochira/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -I/home/nekochira/esp/esp-idf/components/heap/include -I/home/nekochira/esp/esp-idf/components/heap/tlsf -I/home/nekochira/esp/esp-idf/components/log/include -I/home/nekochira/esp/esp-idf/components/soc/include -I/home/nekochira/esp/esp-idf/components/soc/esp32s3 -I/home/nekochira/esp/esp-idf/components/soc/esp32s3/include -I/home/nekochira/esp/esp-idf/components/soc/esp32s3/register -I/home/nekochira/esp/esp-idf/components/hal/platform_port/include -I/home/nekochira/esp/esp-idf/components/hal/esp32s3/include -I/home/nekochira/esp/esp-idf/components/hal/include -I/home/nekochira/esp/esp-idf/components/esp_rom/include -I/home/nekochira/esp/esp-idf/components/esp_rom/esp32s3/include -I/home/nekochira/esp/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/home/nekochira/esp/esp-idf/components/esp_rom/esp32s3 -I/home/nekochira/esp/esp-idf/components/esp_common/include -I/home/nekochira/esp/esp-idf/components/esp_system/include -I/home/nekochira/esp/esp-idf/components/esp_system/port/soc -I/home/nekochira/esp/esp-idf/components/esp_system/port/include/private -I/home/nekochira/esp/esp-idf/components/xtensa/esp32s3/include -I/home/nekochira/esp/esp-idf/components/xtensa/include -I/home/nekochira/esp/esp-idf/components/xtensa/deprecated_include -I/home/nekochira/esp/esp-idf/components/driver/deprecated -I/home/nekochira/esp/esp-idf/components/driver/i2c/include -I/home/nekochira/esp/esp-idf/components/driver/touch_sensor/include -I/home/nekochira/esp/esp-idf/components/driver/twai/include -I/home/nekochira/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/nekochira/esp/esp-idf/components/esp_pm/include -I/home/nekochira/esp/esp-idf/components/esp_ringbuf/include -I/home/nekochira/esp/esp-idf/components/esp_driver_gpio/include -I/home/nekochira/esp/esp-idf/components/esp_driver_pcnt/include -I/home/nekochira/esp/esp-idf/components/esp_driver_gptimer/include -I/home/nekochira/esp/esp-idf/components/esp_driver_spi/include -I/home/nekochira/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/nekochira/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/nekochira/esp/esp-idf/components/esp_driver_i2s/include -I/home/nekochira/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/nekochira/esp/esp-idf/components/sdmmc/include -I/home/nekochira/esp/esp-idf/components/esp_driver_sdspi/include -I/home/nekochira/esp/esp-idf/components/esp_driver_sdio/include -I/home/nekochira/esp/esp-idf/components/esp_driver_dac/include -I/home/nekochira/esp/esp-idf/components/esp_driver_rmt/include -I/home/nekochira/esp/esp-idf/components/esp_driver_tsens/include -I/home/nekochira/esp/esp-idf/components/esp_driver_sdm/include -I/home/nekochira/esp/esp-idf/components/esp_driver_i2c/include -I/home/nekochira/esp/esp-idf/components/esp_driver_uart/include -I/home/nekochira/esp/esp-idf/components/esp_driver_ledc/include -I/home/nekochira/esp/esp-idf/components/esp_driver_parlio/include -I/home/nekochira/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/nekochira/esp/esp-idf/components/esp_driver_twai/include -I/home/nekochira/esp/esp-idf/components/esp_event/include -I/home/nekochira/code/drone/hello_world/managed_components/zorxx__ibus/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/nekochira/code/drone/hello_world=. -fmacro-prefix-map=/home/nekochira/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/nekochira/code/drone/hello_world/main/main.c
In file included from /home/nekochira/code/drone/hello_world/main/motor.h:2,
                 from /home/nekochira/code/drone/hello_world/main/main.c:7:
/home/nekochira/esp/esp-idf/components/driver/deprecated/driver/mcpwm.h:15:2: warning: #warning "legacy MCPWM driver is deprecated, please migrate to the new driver (include driver/mcpwm_prelude.h)" [-Wcpp]
   15 | #warning "legacy MCPWM driver is deprecated, please migrate to the new driver (include driver/mcpwm_prelude.h)"
      |  ^~~~~~~
/home/nekochira/code/drone/hello_world/main/main.c: In function 'app_main':
/home/nekochira/code/drone/hello_world/main/main.c:39:11: error: aggregate value used where a floating-point was expected
   39 |           puissance = (float)last_channels[2];
      |           ^~~~~~~~~
[2/9] Performing build step for 'bootloader'
[1/1] cd /home/nekochira/code/drone/hello_world/build/bootloader/esp-idf/esptool_py && /home/nekochira/.espressif/python_env/idf5.5_py3.14_env/bin/python /home/nekochira/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/nekochira/code/drone/hello_world/build/bootloader/bootloader.bin
Bootloader binary size 0x5240 bytes. 0x2dc0 bytes (36%) free.
ninja: build stopped: subcommand failed.
